--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Codystar&family=Monoton&family=Press+Start+2P&display=swap');
+
+$scoreboardfontclr: #eed9e6;
+$scoreboardbgclr: #180712;
 
 *, *:before, *:after {
   box-sizing: border-box;
@@ -9,11 +13,40 @@ html, body {
   min-height: 100%;
   margin: 0;
   padding: 0;
+  font-size: 1em;
 }
 
 body {
   background: #ebebeb;
   display: flex;
   flex-direction: column;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Monoton', cursive;
+}
+#score-container{
+  flex-direction: column;
+}
+
+#score-board, #players{
+  display: flex;
+}
+
+#players{
+  font-family: 'Press Start 2P', cursive;
+}
+
+#score-board {
+  background-color: $scoreboardbgclr; 
+  font-family: 'Codystar', bold;
+  font-size: 10rem; 
+  color: $scoreboardfontclr;
+  border-radius: 0.5em;
+}
+
+.score, .player{
+  padding: 0.5em;
+}
+
+.player{
+  margin-left: 5em;
+  margin-right: 5em;
 }
