--- a/src/modules/score/player/Player.scss
+++ b/src/modules/score/player/Player.scss
@@ -31,17 +31,18 @@ $scoreboardbgclr: #180712;
     }
     .Buttons{
         display: flex;
+        width: 100%;
+        justify-content: space-evenly;
+
         button {
             background: none;
             border: none;
-            padding: 0;
-            margin: 1em;
             display: flex;
             align-items: center;
             justify-content: center;
             border-radius: 50%;
-            width: 4em;
-            height: 4em;
+            width: 6em;
+            height: 6em;
     
             svg {
                 fill: #ffffff;
