--- a/src/index.scss
+++ b/src/index.scss
@@ -27,3 +27,29 @@ body {
 h1 {
   font-family: "Roboto";
 }
+
+@media only screen and (max-width: 700px) {
+  html, body {
+    font-size: 1em;
+  }  
+}
+@media only screen and (max-width: 600px) {
+  html, body {
+    font-size: 0.8em;
+  }  
+}
+@media only screen and (max-width: 500px) {
+  html, body {
+    font-size: 0.6em;
+  }  
+}
+@media only screen and (max-width: 400px) {
+  html, body {
+    font-size: 0.4em;
+  }  
+}
+@media only screen and (max-width: 300px) {
+  html, body {
+    font-size: 0.3em;
+  }  
+}
