Use 62.5% base font and increase from that. Also move players container selector to right scss file.

--- a/src/modules/score/ScoreContainer.scss
+++ b/src/modules/score/ScoreContainer.scss
@@ -8,4 +8,8 @@ $olympic: 'Monton', cursive;
     justify-content: space-evenly;
     flex-direction: column;
     font-family: $olympic;
+
+    #players {
+        display: flex;
+    }
 }
