--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,10 @@ html, body {
   min-height: 100%;
   margin: 0;
   padding: 0;
-  font-size: 1em;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 body {
@@ -18,10 +21,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: 'Monoton', cursive;
-}
-
-#players{
-  display: flex;
+  font-size: 1.6rem;
 }
 
 h1 {
